--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
   <header class="header">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logo Tyberwarts">
+    <form class="trybewarts-login" action="">
+      <input type="email" name="email" id="inputEmail" placeholder="Email">
+      <input type="password" name="password" id="inputSenha" placeholder="Senha">
+      <button id="Login">Entrar</button>
+    </form>
+
   </header>
   <script src="script.js"></script>
 </body>
