--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header class="header">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logo Tyberwarts">
     <form class="trybewarts-login" action="">
+      <h1 id="trybewarts-header-title">Tybewarts</h1>
       <input type="email" name="email" id="inputEmail" placeholder="Email">
       <input type="password" name="password" id="inputSenha" placeholder="Senha">
       <button id="Login">Entrar</button>
