--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <body>
   <header class="header">
     <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logo Tyberwarts">
+    
+    <h1 id="trybewarts-header-title">Trybewarts</h1>
 
     <form action="" class="trybewarts-login">
       <input type="email" name="email" id="input-email" placeholder="Email">
       <input type="password" name="password" id="input-senha" placeholder="Senha">
       <button id="btn-login">Entrar</button>
     </form>
+
   </header>
   <script src="script.js"></script>
 </body>
