--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <button id="btn-login">Entrar</button>
     </form>
   </header>
+<main>
+  <form action="" id="evaluation-form">
+    
+  </form>
+</main>
+  
   <script src="script.js"></script>
 </body>
 
