--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   <main>
     <form action="" id="evaluation-form"></form>
+    <img src="images/trybewarts-colored.svg" alt="" id="trybewarts-forms-logo">
   </main>
   <script src="script.js"></script>
 </body>
