--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   </header>
 
   <main>
-    <form action="" id="evaluation-form"></form>
+    <form action="" id="evaluation-form">
+    </form>
+    <img src="images/trybewarts-colored.svg" alt="Brasão Trybewarts" id="trybewarts-forms-logo">
   </main>
   <script src="script.js"></script>
 </body>
