--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
   <main>
     <form action="" id="evaluation-form">
+      <input type="text" name="" id="input-name" placeholder="Nome">
+      <input type="text" name="" id="input-lastname" placeholder="Sobrenome">
+      <input type="text" name="" id="input-email" placeholder="Email">
     </form>
     <img src="images/trybewarts-colored.svg" alt="Brasão Trybewarts" id="trybewarts-forms-logo">
   </main>
