--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
       </div>
       <div>
         <input type="email" name="" id="input-email" placeholder="Email">
-        <select name="" id="house"> 
+        <select name="" id="house">
           <option value="Gitnória" id="gitnoria-house">Gitnória</option>
           <option value="Reactpuff" id="reactpuff-house">Reactpuff</option>
           <option value="Corvinode" id="corvinode-house">Corvinode</option>
           <option value="Pytherina" id="pytherina-house">Pytherina</option>
         </select>
       </div>
-    </form>
+        <label for="" id="label-family">Qual sua família?</label>
+          <div><label for="Frontend"><input type="radio" name="family" id="Frontend" value="Frontend">Frontend</label></div>
+          <div><label for="Backend"><input type="radio" name="family" id="Backend" value="Backend">Backend</label></div>
+          <div><label for="FullStack"><input type="radio" name="family" id="FullStack" value="FullStack">FullStack</label></div>
+     </form>
+
+
     <img src="images/trybewarts-colored.svg" alt="Brasão Trybewarts" id="trybewarts-forms-logo">
   </main>
   <script src="script.js"></script>
