--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
           <div><label for="Frontend"><input type="radio" name="family" id="Frontend" value="Frontend">Frontend</label></div>
           <div><label for="Backend"><input type="radio" name="family" id="Backend" value="Backend">Backend</label></div>
           <div><label for="FullStack"><input type="radio" name="family" id="FullStack" value="FullStack">FullStack</label></div>
-     </form>
-
-
+     
+        <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+       <div><label for="HoFs"><input id="HoFs" type="checkbox" value="HoFs">HoFs</label></div>
+       <div><label for="Jest"><input id="Jest" type="checkbox" value="Jest">Jest</label></div>
+        <div><label for="Promises"><input id="Promises" type="checkbox" value="Promises">Promises</label></div>
+        <div><label for="React"><input id="React" type="checkbox" value="React">React</label></div>
+        <div><label for="SQL"><input id="SQL" type="checkbox" value="SQL">SQL</label></div>
+        <div><label for="Python"><input id="Python" type="checkbox" value="Python">Python</label></div>
+    </form>
     <img src="images/trybewarts-colored.svg" alt="Brasão Trybewarts" id="trybewarts-forms-logo">
   </main>
   <script src="script.js"></script>
