--- a/index.html
+++ b/index.html
@@ -79,6 +79,53 @@
             <input type="checkbox" name="" value="Python" id="python">
             <label for="python">Python</label>
           </div>
+
+
+          <div id="nota">
+          <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
+
+          <div>
+            <input type="radio" name="rate" id="1" value="1">
+            <label for="1">1</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="2" value="2">
+            <label for="2">2</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="3" value="3">
+            <label for="3">3</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="4" value="4">
+            <label for="4">4</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="5" value="5">
+            <label for="5">5</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="6" value="6">
+            <label for="6">6</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="7" value="7">
+            <label for="7">7</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="8" value="8">
+            <label for="8">8</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="9" value="9">
+            <label for="9">9</label>
+          </div>
+          <div>
+            <input type="radio" name="rate" id="10" value="10">
+            <label for="10">10</label>
+          </div>
+
+        </div>
      </form>
 
 
