--- a/index.html
+++ b/index.html
@@ -83,46 +83,49 @@
           <label for="" id="label-rate">Como você avalia a Trybewarts?</label>
         
         <div>
-          <input type="radio" name="rate" value="1">1
-          <label for=""></label>
+          <input type="radio" name="rate" value="1" id="1">
+          <label for="1">1</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="2">2
-          <label for=""></label>
+          <input type="radio" name="rate" value="2" id="2">
+          <label for="2">2</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="3">3
-          <label for=""></label>
+          <input type="radio" name="rate" value="3" id="3">
+          <label for="3">3</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="4">4
-          <label for=""></label>
+          <input type="radio" name="rate" value="4" id="4">
+          <label for="4">4</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="5">5
-          <label for=""></label>
+          <input type="radio" name="rate" value="5" id="5">
+          <label for="5">5</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="6">6
-          <label for=""></label>
+          <input type="radio" name="rate" value="6" id="6">
+          <label for="6">6</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="7">7
-          <label for=""></label>
+          <input type="radio" name="rate" value="7" id="7">
+          <label for="7">7</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="8">8
-          <label for=""></label>
+          <input type="radio" name="rate" value="8" id="8">
+          <label for="8">8</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="9">9
-          <label for=""></label>
+          <input type="radio" name="rate" value="9" id="9">
+          <label for="9">9</label>
         </div>
         <div>
-          <input type="radio" name="rate" value="10">10
-          <label for=""></label>
+          <input type="radio" name="rate" value="10" id="10">
+          <label for="10">10</label>
         </div>
-  </div>
+          </div>
+          <label for="" class="textarea">Deixe seu comentário:
+            <textarea class="textarea" maxlength="500"></textarea>
+          </label>    
      </form>
 
 
