--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <label for="" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </div>
-        <button type="submit" id="submit-btn">Enviar</button>
+        <button type="submit" id="submit-btn" disabled>Enviar</button>
       </form>
 
       <img
