--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
           <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
           <input type="checkbox" name="" id="agreement">
         </div>
+
+        <button type="submit" id="submit-btn" disabled>Enviar</button>
       </form>
 
       <img
