--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -155,6 +155,7 @@
 
         <label for="textarea" class="textarea">Deixe seu comentário:</label>
         <textarea name="" id="textarea" cols="30" rows="10" maxlength="500"></textarea>
+        <p id="counter">500</p>
 
         <div>
           <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
